saving npc progress

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1972,9 +1972,9 @@
     <label class="settings" data-i18n-title="modifier" title="modifier">
       <input name="attr_charisma_modifier" placeholder="+" title="@{charisma_modifier}" type="number" value=""/>
     </label>
-    <button data-i18n="e" name="edge" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{edge}}}{{base=^{base}}}{{dice=[[((@{edge}+@{attribute_roll})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">e</button><span name="attr_display_edge"></span>
-    <label class="settings" data-i18n-title="Edge" title="Edge">
-      <input name="attr_edge_base" placeholder="3" title="@{edge_base}" type="number" value="3"/>
+    <button data-i18n="e" name="edge" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{edge}}}{{base=^{base}}}{{dice=[[((@{edge}+@{attribute_roll})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">e</button><span name="attr_edge"></span>
+    <label class="settings" data-i18n-title="edge" title="edge">
+      <input name="attr_edge" placeholder="3" title="@{edge}" type="number" value="3"/>
     </label>
     <h1 data-i18n="ess">ess</h1><span name="attr_essence"></span>
     <label class="settings" data-i18n-title="essence" title="essence">
@@ -2078,14 +2078,14 @@
   <div class="body">
     <div class="column">
       <h1 class="settings" data-i18n="bonuses">Bonuses</h1>
-      <div class="rows">
+      <div class="rows grunt">
         <h2 data-i18n="pr">Professional Rating</h2><span name="attr_pr"></span>
         <label class="settings" data-i18n-title="pr" title="Professional Rating">
           <input name="attr_pr" title="@{pr}" type="number"/>
         </label>
       </div>
       <div class="rows grunt">
-        <button data-i18n="initiative" name="Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{initiative}}}{{base=^{base}}}{{dice=[[((@{initiative_mod})+@{wound_toggle}+@{modifier_toggle})+(@{initiative_dice})d6cf0 &{tracker}]]}}">Initiative</button>
+        <button data-i18n="initiative" name="Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{initiative}}}{{base=^{base}}}{{dice=[[((@{initiative_mod})+@{wounds_toggle}+@{modifiers_toggle})+(@{initiative_dice})d6cf0 &{tracker}]]}}">Initiative</button>
         <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_initiative_modifier" placeholder="0" title="@{initiative_modifier}" type="number" value="0"/>
         </label><span class="settings">+</span>
@@ -2094,7 +2094,7 @@
         </label><span class="settings" data-i18n="d6">d6</span><span class="settings tiny-span">=</span><span name="attr_display_initiative_mod"></span><span class="tiny-span">+</span><span name="attr_initiative_dice"></span><span class="tiny-span" data-i18n="d6">d6</span>
       </div>
       <div class="rows grunt magic">
-        <button data-i18n="astralinitiative" name="Astral Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{astralinitiative}}}{{base=^{base}}}{{dice=[[((@{astral_mod})+@{wound_toggle}+@{modifier_toggle})+(@{astral_dice})d6cf0 &{tracker}]]}}">Astral Initiative</button>
+        <button data-i18n="astralinitiative" name="Astral Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{astralinitiative}}}{{base=^{base}}}{{dice=[[((@{astral_mod})+@{wounds_toggle}+@{modifiers_toggle})+(@{astral_dice})d6cf0 &{tracker}]]}}">Astral Initiative</button>
         <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_astral_modifier" placeholder="0" title="@{astral_modifier}" type="number" value="0"/>
         </label><span class="settings">+</span>
@@ -2102,8 +2102,8 @@
           <input min="0" max="4" name="attr_astral_dice_modifier" placeholder="0" title="@{astral_dice_modifier}" type="number" value="0"/>
         </label><span class="settings" data-i18n="d6">d6</span><span class="settings tiny-span">=</span><span name="attr_display_astral_mod"></span><span class="tiny-span">+</span><span name="attr_astral_dice"></span><span class="tiny-span" data-i18n="d6">d6</span>
       </div>
-      <div class="rows grunt sprite">
-        <button data-i18n="matrixinitiative" name="Matrix Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{matrixinitiative}}}{{base=^{base}}}{{dice=[[((@{matrix_mod})+@{wound_toggle}+@{modifier_toggle})+(@{matrix_dice})d6cf0 &{tracker}]]}}">Matrix Initiative</button>
+      <div class="rows grunt sprite host">
+        <button data-i18n="matrixinitiative" name="Matrix Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{matrixinitiative}}}{{base=^{base}}}{{dice=[[((@{matrix_mod})+@{wounds_toggle}+@{modifiers_toggle})+(@{matrix_dice})d6cf0 &{tracker}]]}}">Matrix Initiative</button>
         <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_matrix_modifier" placeholder="0" title="@{matrix_modifier}" type="number" value="0"/>
         </label><span class="settings">+</span>
@@ -2181,8 +2181,11 @@
           </label><span class="settings tiny-span">=</span><span name="attr_device_rating"></span>
         </div>
       </div>
+      <div class="rows host sprite">
+        <button data-i18n="conditionmonitorm" name="act_cond_reset" type="action">Condition Monitor (M)</button><span name="attr_matrix"></span>
+      </div>
     </div>
-    <div class="column grunt vehicle">
+    <div class="column">
       <h1 class="settings" data-i18n="modifier">Modifier</h1>
       <div class="rows">
         <button data-i18n="armorrating" name="armorrating" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{armorrating}}}{{base=base}}{{dice=[[((@{soak})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}">armorrating</button>
@@ -2256,6 +2259,8 @@
           <input class="character-type" name="attr_flag_matrix" title="@{flag_matrix}" type="checkbox" value="matrix"/>
           <h2>Matrix Device</h2>
         </label>
+      </div>
+      <div class="rows vehicle">
         <label class="settings" title="Drone">
           <input class="character-type" name="attr_flag_drone" title="@{flag_drone}" type="checkbox" value="drone"/>
           <h2>Drone</h2>
