--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -2093,7 +2093,7 @@
           <input min="0" max="4" name="attr_initiative_dice_modifier" placeholder="0" title="@{initiative_dice_modifier}" type="number" value="0"/>
         </label><span class="settings" data-i18n="d6">d6</span><span class="settings tiny-span">=</span><span name="attr_display_initiative_mod"></span><span class="tiny-span">+</span><span name="attr_initiative_dice"></span><span class="tiny-span" data-i18n="d6">d6</span>
       </div>
-      <div class="rows grunt magic">
+      <div class="rows grunt hide-magic">
         <button data-i18n="astralinitiative" name="Astral Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{astralinitiative}}}{{base=^{base}}}{{dice=[[((@{astral_mod})+@{wounds_toggle}+@{modifiers_toggle})+(@{astral_dice})d6cf0 &{tracker}]]}}">Astral Initiative</button>
         <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_astral_modifier" placeholder="0" title="@{astral_modifier}" type="number" value="0"/>
@@ -2102,7 +2102,7 @@
           <input min="0" max="4" name="attr_astral_dice_modifier" placeholder="0" title="@{astral_dice_modifier}" type="number" value="0"/>
         </label><span class="settings" data-i18n="d6">d6</span><span class="settings tiny-span">=</span><span name="attr_display_astral_mod"></span><span class="tiny-span">+</span><span name="attr_astral_dice"></span><span class="tiny-span" data-i18n="d6">d6</span>
       </div>
-      <div class="rows grunt sprite host">
+      <div class="rows grunt vehicle sprite host">
         <button data-i18n="matrixinitiative" name="Matrix Initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{matrixinitiative}}}{{base=^{base}}}{{dice=[[((@{matrix_mod})+@{wounds_toggle}+@{modifiers_toggle})+(@{matrix_dice})d6cf0 &{tracker}]]}}">Matrix Initiative</button>
         <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_matrix_modifier" placeholder="0" title="@{matrix_modifier}" type="number" value="0"/>
@@ -2132,6 +2132,18 @@
           <input name="attr_stun_modifier" placeholder="0" title="@{stun_modifier}" type="number" value="0"/>
         </label><span class="settings tiny-span">=</span><span name="attr_physical" title="@{physical_modifier}"></span><span>/</span><span name="attr_stun" title="@{stun_modifier}"></span>
       </div>
+      <div class="rows vehicle">
+        <button data-i18n="conditionmonitorpm" name="act_cond_reset" type="action">Condition Monitor (P/M)</button>
+        <label class="settings" data-i18n-title="physicalbonus" title="physicalbonus">
+          <input name="attr_physical_modifier" placeholder="0" title="@{physical_modifier}" type="number" value="0"/>
+        </label><span class="settings">/</span>
+        <label class="settings" data-i18n-title="matrixbonus" title="matrixbonus">
+          <input name="attr_matrix_modifier" placeholder="0" title="@{matrix_modifier}" type="number" value="0"/>
+        </label><span class="settings tiny-span">=</span><span name="attr_physical" title="@{physical_modifier}"></span><span>/</span><span name="attr_matrix" title="@{matrix_modifier}"></span>
+      </div>
+      <div class="rows host sprite">
+        <button data-i18n="conditionmonitorm" name="act_cond_reset" type="action">Condition Monitor (M)</button><span name="attr_matrix"></span>
+      </div>
       <div class="rows grunt">
         <h2 data-i18n="physical">val</h2>
         <label class="settings" data-i18n-title="modifier" title="modifier">
@@ -2153,15 +2165,6 @@
         </label>
       </div>
       <div class="rows vehicle">
-        <h2 data-i18n="conditionmonitorpm">Condition Monitor (P/M)</h2>
-        <label class="settings" data-i18n-title="physicalbonus" title="physicalbonus">
-          <input name="attr_physical_modifier" placeholder="0" title="@{physical_modifier}" type="number" value="0"/>
-        </label><span class="settings">/</span>
-        <label class="settings" data-i18n-title="matrixbonus" title="matrixbonus">
-          <input name="attr_matrix_modifier" placeholder="0" title="@{matrix_modifier}" type="number" value="0"/>
-        </label><span class="settings tiny-span">=</span><span name="attr_physical" title="@{physical_modifier}"></span><span>/</span><span name="attr_matrix" title="@{matrix_modifier}"></span>
-      </div>
-      <div class="rows vehicle">
         <div class="rows">
           <h2 data-i18n="data_processing">key</h2>
           <label class="settings" data-i18n-title="data_processing" title="data_processing"> 
@@ -2180,9 +2183,6 @@
             <input name="attr_device_rating" min="0" placeholder="0" title="@{device_rating}" type="number" value=""/>
           </label><span class="settings tiny-span">=</span><span name="attr_device_rating"></span>
         </div>
-      </div>
-      <div class="rows host sprite">
-        <button data-i18n="conditionmonitorm" name="act_cond_reset" type="action">Condition Monitor (M)</button><span name="attr_matrix"></span>
       </div>
     </div>
     <div class="column">
@@ -2266,6 +2266,76 @@
           <h2>Drone</h2>
         </label>
       </div>
+    </div>
+    <!--TEXTBOXES-->
+    <div class="textrow grunt">
+      <input name="attr_qualities" type="hidden" value=""/>
+      <h2 data-i18n="qualities">key</h2>
+      <label class="settings" data-i18n-title="qualities" title="Qualities">
+        <textarea name="attr_qualities" placeholder="Qualities" title="@{qualities}"></textarea>
+      </label><span name="attr_qualities"></span>
+    </div>
+    <div class="textrow grunt">
+      <input name="attr_augmentations" type="hidden" value=""/>
+      <h2 data-i18n="augmentations">key</h2>
+      <label class="settings" data-i18n-title="augmentations" title="Augmentations">
+        <textarea name="attr_augmentations" placeholder="Augmentations" title="@{augmentations}"></textarea>
+      </label><span name="attr_augmentations"></span>
+    </div>
+    <div class="textrow grunt vehicle">
+      <input name="attr_gear" type="hidden" value=""/>
+      <h2 data-i18n="gear">key</h2>
+      <label class="settings" data-i18n-title="gear" title="Gear">
+        <textarea name="attr_gear" placeholder="Gear" title="@{gear}"></textarea>
+      </label><span name="attr_gear"></span>
+    </div>
+    <div class="textrow vehicle">
+      <input name="attr_programs" type="hidden" value=""/>
+      <h2 data-i18n="programs">key</h2>
+      <label class="settings" data-i18n-title="programs" title="Programs">
+        <textarea name="attr_programs" placeholder="Programs" title="@{programs}"></textarea>
+      </label><span name="attr_programs"></span>
+    </div>
+    <div class="textrow vehicle">
+      <input name="attr_modifications" type="hidden" value=""/>
+      <h2 data-i18n="modifications">key</h2>
+      <label class="settings" data-i18n-title="modifications" title="Modifications">
+        <textarea name="attr_modifications" placeholder="Modifications" title="@{modifications}"></textarea>
+      </label><span name="attr_modifications"></span>
+    </div>
+    <div class="textrow grunt hide-magic">
+      <input name="attr_powers" type="hidden" value=""/>
+      <h2 data-i18n="powers">key</h2>
+      <label class="settings" data-i18n-title="powers" title="Powers">
+        <textarea name="attr_powers" placeholder="Powers" title="@{powers}"></textarea>
+      </label><span name="attr_powers"></span>
+    </div>
+    <div class="textrow grunt hide-magic">
+      <input name="attr_weakness" type="hidden" value=""/>
+      <h2 data-i18n="weakness">key</h2>
+      <label class="settings" data-i18n-title="weakness" title="Weakness">
+        <textarea name="attr_weakness" placeholder="Weakness" title="@{weakness}"></textarea>
+      </label><span name="attr_weakness"></span>
+    </div>
+    <div class="textrow grunt hide-magic">
+      <input name="attr_initiate" type="hidden" value=""/>
+      <h2 data-i18n="initiate">key</h2><span name="attr_initiate"></span>
+      <label class="settings" data-i18n-title="initiate" title="Initiate">
+        <input name="attr_initiate" placeholder="initiate" title="@{initiate}"/>
+      </label>
+      <label class="settings" data-i18n-title="metamagic" title="metamagic">
+        <textarea name="attr_metamagic" placeholder="metamagic" title="@{metamagic}"></textarea>
+      </label><span name="attr_metamagic"></span>
+    </div>
+    <div class="textrow grunt resonance-magic">
+      <input name="attr_submersion" type="hidden" value=""/>
+      <h2 data-i18n="submersion">key</h2><span name="attr_submersion"></span>
+      <label class="settings" data-i18n-title="submersion" title="Submersion">
+        <input name="attr_submersion" placeholder="submersion" title="@{submersion}"/>
+      </label>
+      <label class="settings" data-i18n-title="echos" title="echos">
+        <textarea name="attr_echos" placeholder="echos" title="@{echos}"></textarea>
+      </label><span name="attr_echos"></span>
     </div>
   </div>
 </div><div class="footer">
