--- a/Shadowrun5thEdition/src/npc.html
+++ b/Shadowrun5thEdition/src/npc.html
@@ -1,28 +1,12 @@
-	<div class="settings stat-inputs">
-		<input type="hidden" class="npc-type" name="attr_sheet_type" value="grunt" />
-	<!-- ~~~~~~~~ modifieres  ~~~~~~~~ -->
-		<h1 data-i18n="bonuses">Bonuses</h1>
-
-		<div class="grunt 2col"><!--Start Right Checkboxes -->
-			<input class="character-type" type="checkbox" name="attr_flag_special" checked="checked" title="@{flag_special}" value="mundane" /><label data-i18n="mundane">Mundane</label><br />
-			
-			<input class="character-type" type="checkbox" name="attr_flag_special" title="@{flag_special}" value="magic" />
-			<label data-i18n="awakened">Awakened</label><br />
-			
-			<input class="character-type" type="checkbox" name="attr_flag_special" title="@{flag_special}" value="resonance" />
-			<label data-i18n="emerged">Emerged</label>
-			<br /><br />
-			
-			<input class="character-type" type="checkbox" name="attr_flag_matrix" title="@{flag_matrix}" value="matrix" /><label data-i18n="matrixdevice">Matrix Device</label>
-		</div>
-		<div class="vehicle 2col"><!--Start Right Checkboxes -->
-			<input class="character-type" type="checkbox" name="attr_flag_drone" title="@{flag_drone}" value="drone" /><label data-i18n="drone">Drone</label>
-		</div>
-		<br />
 	<!-- ~~~~~~~~ Qualities/Augs/Init/Gear/Weakness & Other STUFF ~~~~~~~~ -->
 		<div class="grunt textrow">
-			<label data-i18n="qualities">Qualities </label><textarea name="attr_quality" placeholder="Quality" title="@{quality}"></textarea><br />
-			<label data-i18n="augmentations">Augmentations </label><textarea name="attr_augmentations" placeholder="Augmentations" title="@{augmentations}"></textarea><br />
+			<label data-i18n="qualities">Qualities </label>
+			<textarea name="attr_quality" placeholder="Quality" title="@{quality}"></textarea>
+			<br />
+			<label data-i18n="augmentations">Augmentations </label>
+			<textarea name="attr_augmentations" placeholder="Augmentations" title="@{augmentations}">
+				
+			</textarea><br />
 		</div>
 		<div class="grunt vehicle textrow">
 			<label data-i18n="gear">Gear </label><textarea name="attr_gear" placeholder="Gear" title="@{gear}"></textarea>
@@ -35,86 +19,20 @@
 			<input type="hidden" class="character-type" name="attr_flag_special" />
 			<div class="magic textrow">
 				<label data-i18n="initiate">Initiate </label>
-					<input type="number" name="attr_initiate" value="0" placeholder="Grade" title="@{initiate}" /><textarea name="attr_metamagic" placeholder="Metamagics" title="@{metamagic}"></textarea><br />
+					<input type="number" name="attr_initiate" value="0" placeholder="Grade" title="@{initiate}" />
+					<textarea name="attr_metamagic" placeholder="Metamagics" title="@{metamagic}"></textarea><br />
 				<label data-i18n="powers">Powers </label><textarea name="attr_powers" placeholder="Powers" title="@{powers}"></textarea><br />
 				<label data-i18n="weakness">Weakness </label><textarea  name="attr_weakness" placeholder="Weaknesses" title="@{weakness}"></textarea>
 			</div>
 			<input type="hidden" class="character-type" name="attr_flag_special" />
 			<div class="resonance textrow">
 				<label data-i18n="submersion">Submersion </label>
-				<input type="number" name="attr_submersion" value="0" placeholder="Grade" title="@{submersion}" /><textarea name="attr_echos" placeholder="Echos" title="@{echos}"></textarea><br />
+				<input type="number" name="attr_submersion" value="0" placeholder="Grade" title="@{submersion}" />
+				<textarea name="attr_echos" placeholder="Echos" title="@{echos}"></textarea><br />
 			</div>
 		</div>
 	</div><!-- ~~~~~~~~ End of Settings  ~~~~~~~~ -->
 	<div class="display">
-
-	<!-- ~~~~~~~~ Initiative  ~~~~~~~~ -->
-		<div class="grunt">
-			<div>
-				<label data-i18n="pr">Professional Rating</label><span name="attr_pr"></span>
-			</div>
-			<div>
-				<label>
-					<button type="roll" name="initiative" value="@{gm_toggle} &{template:rolls}{{header=^{initiative}}}{{base=^{base}}}{{dice=[[((@{initiative_mod})+@{wound_toggle}+@{modifier_toggle})+(@{initiative_dice})d6cf0 &{tracker}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Initiative Roll" data-i18n="initiative">Initiative</button>
-				</label>
-				<span name="attr_display_initiative_mod"></span><span> + </span><span name="attr_initiative_dice"></span><span data-i18n="d6">d6</span>
-			</div>
-	<!-- ~~~~~~~~ Astral Initiative  ~~~~~~~~ -->
-			<input type="hidden" class="character-type" name="attr_flag_special" />
-			<div class="magic">
-				<label>
-					<button  type="roll" name="astral initiative" value="@{gm_toggle} &{template:rolls}{{header=^{astralinitiative}}}{{base=^{base}}}{{dice=[[(@{astral_mod}+@{wound_toggle}+@{modifier_toggle})+(@{astral_dice})d6cf0 &{tracker}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Astral Initiative Roll" data-i18n="astralinitiative">Astral Initiative</button>
-				</label>
-				<span name="attr_display_astral_mod"></span><span> + </span><span name="attr_astral_dice"></span><span data-i18n="d6">d6</span>
-				<br />
-			</div>
-		</div>
-	<!-- ~~~~~~~~ Matrix Initiative  ~~~~~~~~ -->
-		<div class="host grunt sprite vehicle">
-			<label><button type="roll" name="matrix initiative" value="@{gm_toggle} &{template:rolls}{{header=^{matrixinitiative}}}{{base=^{base}}}{{dice=[[((@{matrix_mod})+@{wound_toggle}+@{modifier_toggle})+(@{matrix_dice})d6cf0 &{tracker}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Matrix Initiative Roll" data-i18n="matrixinitiative">Matrix Initiative</button>
-			</label>
-			<span name="attr_display_matrix_mod"></span><span> + </span><span name="attr_matrix_dice"></span><span data-i18n="d6">d6</span>
-		</div>
-		<div class="grunt">
-	<!-- ~~~~~~~~ Movement  ~~~~~~~~ -->
-			<div>
-				<label data-i18n="movement">Movement</label>
-				<span name="attr_walk" title="@{walk}"></span><span> / </span><span name="attr_run" title="@{run}"></span><span> / +</span><span name="attr_movement_mod" title="@{movement_mod}"></span>
-			</div>
-	<!-- ~~~~~~~~ Condition Monitor  ~~~~~~~~ -->
-			<div>
-				<button type="action" name="act_cond_reset" data-i18n="conditionmonitorps">Condition Monitor (P/S)</button>
-				<span name="attr_physical" title="@{physical}"></span><span> / </span><span name="attr_stun" title="@{stun}"></span>
-			</div>
-	<!-- ~~~~~~~~ Limits  ~~~~~~~~ -->
-			<div>
-				<label data-i18n="limits">Limits</label>
-				<span data-i18n="physical" style="margin-right: 1%">Physical </span><span name="attr_physical_limit" title="@{physical_limit}"></span>,
-				<span data-i18n="mental" style="margin-right: 1%">Mental </span><span name="attr_mental_limit" title="@{mental_limit}"></span>,
-				<span data-i18n="social" style="margin-right: 1%">Social </span><span name="attr_social_limit" title="@{social_limit}"></span>
-			</div>
-		</div>
-	<!-- ~~~~~~~~ Armor  ~~~~~~~~ -->
-		<div class="grunt vehicle">
-			<div>
-				<label>
-					<button type="roll" name="soak" value="@{gm_toggle} &{template:rolls}{{header=^{soak}}}{{base=^{base}}}{{dice=[[(@{soak}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Soak Roll" data-i18n="armor">
-						Armor
-					</button>
-				</label>
-				<button  type='roll' name="armor" value="@{gm_toggle} &{template:rolls}{{header=Armor Roll}}{{base=^{base}}}{{dice=[[(@{armor_rating}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Armor Roll">
-					<span name="attr_armor_rating"></span>
-				</button>
-				<div class="armor-buttons">
-					<button type="roll" value="@{gm_toggle} &{template:rolls}{{header=Defense}}{{base=^{base}}}{{dice=[[(@{defense}+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Defense Roll"><span class="pictosC">e</span></button>
-						<button type="roll" name="acid protection" value="@{gm_toggle} &{template:rolls}{{header=^{acidprotection}}}{{base=^{base}}}{{dice=[[(@{soak}+@{acid_modifier}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Acid Protection"><span class="pictos3" title="@{acid_modifier}">d</span></button>
-						<button type="roll" name="cold protection" value="@{gm_toggle} &{template:rolls}{{header=^{coldprotection}}}{{base=^{base}}}{{dice=[[(@{soak}+@{cold_modifier}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Cold Protection"><span title="@{cold_modifier}">b</span></button>
-						<button type="roll" name="electrical protection" value="@{gm_toggle} &{template:rolls}{{header=^{electricalprotection}}}{{base=^{base}}}{{dice=[[(@{soak}+@{electrical_modifier}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Electrical Protection"><span title="@{electrical_modifier}">e</span></button>
-						<button type="roll" name="fire protection" value="@{gm_toggle} &{template:rolls}{{header=^{fireprotection}}}{{base=^{base}}}{{dice=[[(@{soak}+@{fire_modifier}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Fire Protection"><span class="pictos3" title="@{fire_modifier}">j</span></button>
-						<button type="roll" name="radiation protection" value="@{gm_toggle} &{template:rolls}{{header=^{radiationprotection}}}{{base=^{base}}}{{dice=[[(@{soak}+@{radiation_modifier}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Radiation Protection"><span class="pictos3" title="@{radiation_modifier}">l</span></button>
-				</div>
-			</div>
-		</div>
 <!-- ~~~~~~~~ Skills  ~~~~~~~~ -->
 		<input type="hidden" class="npc-type" name="attr_sheet_type" value="grunt" />
 		<div class="grunt skills">
