--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -2229,7 +2229,7 @@
         <textarea name="attr_echos" placeholder="echos" title="@{echos}"></textarea>
       </label>
     </div>
-    <div class="rows grunt repeating">
+    <div class="rows grunt repeating inline-repeating">
       <h1 data-i18n="skills">skills</h1>
       <fieldset class="repeating_active">
         <input name="attr_display_rating" type="hidden"/>
@@ -2378,7 +2378,7 @@
         </div>
       </fieldset>
     </div>
-    <div class="rows grunt repeating">
+    <div class="rows grunt repeating inline-repeating">
       <h1 data-i18n="knowledgeskills">knowledgeskills</h1>
       <fieldset class="repeating_knowledge">
         <input name="attr_display_rating" type="hidden"/>
@@ -2433,7 +2433,7 @@
         </div>
       </fieldset>
     </div>
-    <div class="rows grunt repeating">
+    <div class="rows grunt repeating inline-repeating">
       <h1 data-i18n="languageskills">languageskills</h1>
       <fieldset class="repeating_language">
         <input name="attr_display_rating" type="hidden"/>
@@ -2488,7 +2488,7 @@
         </div>
       </fieldset>
     </div>
-    <div class="rows sprite repeating">
+    <div class="rows sprite repeating inline-repeating">
       <h1 data-i18n="skills">skills</h1>
       <fieldset class="repeating_active">
         <input name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
@@ -2504,7 +2504,7 @@
         </div>
       </fieldset>
     </div>
-    <div class="rows sprite repeating">
+    <div class="rows sprite repeating inline-repeating">
       <h1 data-i18n="powers">Powers</h1>
       <fieldset class="repeating_powers">
         <input name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
@@ -2518,6 +2518,65 @@
           <label class="full-row" data-i18n-title="notes" title="notes">
             <textarea name="attr_notes" placeholder="Powers notes" title="@{repeating_powers_${x}_notes}" value=""></textarea>
           </label>
+        </div>
+      </fieldset>
+    </div>
+    <div class="rows grunt vehicle repeating weapons">
+      <h1 data-i18n="weapons">Weapons</h1>
+      <fieldset class="repeating_weapon">
+        <input name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
+        <input name="attr_weapon" type="hidden" value=""/><span name="attr_weapon_dice"></span>
+        <button name="weapon" type="roll" value="@{gm_toggle} &amp;{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{weapon_type}}}{{base=^{base}}}{{dice=[[((@{weapon_dice})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6&gt;5@{explode_toggle}]]}}{{desc=ACC @{weapon_acc}, DV @{weapon_dv}, AP @{weapon_ap}}}{{rea=[[@{weapon_reach}]]}}"><span name="attr_weapon_name"></span></button><span name="attr_weapon"></span>
+        <div class="settings">
+          <input name="attr_weapon_range" type="hidden" value="range"/>
+          <h2 data-i18n="range">Range</h2>
+          <h2 data-i18n="dice">Dice</h2>
+          <h2 data-i18n="name">Name</h2>
+          <h2 data-i18n="type">Type</h2>
+          <h2 data-i18n="reach">Reach</h2>
+          <h2 data-i18n="acc">ACC</h2>
+          <h2 data-i18n="dam">Dam</h2>
+          <h2 data-i18n="ap">AP</h2>
+          <h2 data-i18n="modes">Modes</h2>
+          <h2 data-i18n="recoil">Recoil</h2>
+          <h2 data-i18n="ammo">Ammo</h2>
+          <select name="attr_weapon_range" title="@{repeating_weapon_${x}_weapon_range}" value="range">
+            <option data-i18n="range" value="range" selected="selected">range</option>
+            <option data-i18n="melee" value="melee">melee</option>
+          </select>
+          <label data-i18n-title="dice" title="Dice">
+            <input name="attr_weapon_dice" placeholder="18" title="@{repeating_weapon_${x}_weapon_dice}" type="number"/>
+          </label>
+          <label data-i18n-title="name" title="Name">
+            <input name="attr_weapon_name" placeholder="Ares Predator" title="@{repeating_weapon_${x}_weapon_name}" type="text"/>
+          </label>
+          <label data-i18n-title="type" title="Type">
+            <input name="attr_weapon_type" placeholder="Heavy Pistol" title="@{repeating_weapon_${x}_weapon_type}" type="text"/>
+          </label>
+          <label data-i18n-title="reach" title="Reach">
+            <input name="attr_weapon_reach" placeholder="0" title="@{repeating_weapon_${x}_weapon_reach}" type="number"/>
+          </label>
+          <label data-i18n-title="acc" title="ACC">
+            <input name="attr_weapon_acc" placeholder="5" title="@{repeating_weapon_${x}_weapon_acc}" type="text"/>
+          </label>
+          <label data-i18n-title="dam" title="Dam">
+            <input name="attr_weapon_dv" placeholder="9P" title="@{repeating_weapon_${x}_weapon_dv}" type="text"/>
+          </label>
+          <label data-i18n-title="ap" title="AP">
+            <input name="attr_weapon_ap" placeholder="-2" title="@{repeating_weapon_${x}_weapon_ap}" type="number"/>
+          </label>
+          <label data-i18n-title="modes" title="Modes">
+            <input name="attr_weapon_mode" placeholder="SA/BF/FA" title="@{repeating_weapon_${x}_weapon_mode}" type="text"/>
+          </label>
+          <label data-i18n-title="recoil" title="Recoil">
+            <input name="attr_weapon_recoil" placeholder="+2" title="@{repeating_weapon_${x}_weapon_recoil}" type="text"/>
+          </label>
+          <label data-i18n-title="ammo" title="Ammo">
+            <input name="attr_weapon_ammo" placeholder="15" title="@{repeating_weapon_${x}_weapon_ammo}" type="number"/>
+          </label>
+          <label data-i18n-title="notes" title="Notes">
+            <input name="attr_weapon_note" placeholder="w/ 3 clips of explosive rounds" title="@{repeating_weapon_${x}_weapon_note}" type="text"/>
+          </label><span>(c)</span>
         </div>
       </fieldset>
     </div>
