npc spells done

--- a/Shadowrun5thEdition/src/magic.html
+++ b/Shadowrun5thEdition/src/magic.html
@@ -33,10 +33,10 @@
 								</select>
 								<select name="attr_range" title="Range">
 									<option value="LOS" selected="selected" data-i18n="los">LOS</option>
-									<option value="LOS (A)" data-i18n="losa">LOS (A)</option>
+									<option value="LOS (A)" data-i18n="los (a)">LOS (A)</option>
 									<option value="Special" data-i18n="special">Special</option>
 									<option value="T" data-i18n="t">T</option>
-									<option value="T (A)" data-i18n="ta">T (A)</option>
+									<option value="T (A)" data-i18n="t (a)">T (A)</option>
 								</select>
 								<select name="attr_duration" title="Duration">
 									<option value="Instant" selected="selected" data-i18n="instant">Instant</option>
