--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1095,10 +1095,10 @@
 								</select>
 								<select name="attr_range" title="Range">
 									<option value="LOS" selected="selected" data-i18n="los">LOS</option>
-									<option value="LOS (A)" data-i18n="losa">LOS (A)</option>
+									<option value="LOS (A)" data-i18n="los (a)">LOS (A)</option>
 									<option value="Special" data-i18n="special">Special</option>
 									<option value="T" data-i18n="t">T</option>
-									<option value="T (A)" data-i18n="ta">T (A)</option>
+									<option value="T (A)" data-i18n="t (a)">T (A)</option>
 								</select>
 								<select name="attr_duration" title="Duration">
 									<option value="Instant" selected="selected" data-i18n="instant">Instant</option>
@@ -2577,6 +2577,70 @@
           <label data-i18n-title="notes" title="Notes">
             <input name="attr_weapon_note" placeholder="w/ 3 clips of explosive rounds" title="@{repeating_weapon_${x}_weapon_note}" type="text"/>
           </label><span>(c)</span>
+        </div>
+      </fieldset>
+    </div>
+    <div class="rows grunt repeating spells">
+      <h1 data-i18n="spells">Spells</h1>
+      <fieldset class="repeating_NPCspell">
+        <input name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
+        <input name="attr_spell" type="hidden" value=""/><span name="attr_dice"></span>
+        <button name="spell" type="roll" value="@{gm_toggle} &amp;{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{base}}}{{dice=[[((@{dice})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6&gt;5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}, Drain [[?{Force|}+(@{drain})]]}}"><span name="attr_name"></span></button><span name="attr_spell"></span>
+        <div class="settings">
+          <input name="attr_category" type="hidden" value=""/>
+          <h2 data-i18n="category">Category</h2>
+          <h2 data-i18n="dice">Dice</h2>
+          <h2 data-i18n="name">Name</h2>
+          <h2 data-i18n="type">Type</h2>
+          <h2 data-i18n="range">Range</h2>
+          <h2 data-i18n="duration">Duration</h2>
+          <h2 data-i18n="drain">Drain</h2>
+          <h2 data-i18n="combat">Combat</h2>
+          <h2 data-i18n="dam">Dam</h2>
+          <select name="attr_category" title="@{repeating_NPCspell_${x}_category}" value="combat">
+            <option data-i18n="combat" value="Combat" selected="selected">combat</option>
+            <option data-i18n="detection" value="Detection">detection</option>
+            <option data-i18n="health" value="Health">health</option>
+            <option data-i18n="illusion" value="Illusion">illusion</option>
+            <option data-i18n="manipulation" value="Manipulation">manipulation</option>
+          </select>
+          <label data-i18n-title="dice" title="Dice">
+            <input name="attr_dice" placeholder="18" title="@{repeating_NPCspell_${x}_dice}" type="number"/>
+          </label>
+          <label data-i18n-title="name" title="Name">
+            <input name="attr_name" placeholder="Fireball" title="@{repeating_NPCspell_${x}_name}" type="text"/>
+          </label>
+          <select name="attr_type" title="@{repeating_NPCspell_${x}_type}" value="P">
+            <option data-i18n="mana" value="M">mana</option>
+            <option data-i18n="physical" value="P">physical</option>
+          </select>
+          <select name="attr_range" title="@{repeating_NPCspell_${x}_range}" value="LOS">
+            <option data-i18n="los" value="LOS">los</option>
+            <option data-i18n="los (a)" value="LOS (A)">los (a)</option>
+            <option data-i18n="special" value="Special">special</option>
+            <option data-i18n="t" value="T">t</option>
+            <option data-i18n="t (a)" value="T (A)">t (a)</option>
+          </select>
+          <select name="attr_duration" title="@{repeating_NPCspell_${x}_duration}" value="Instant">
+            <option data-i18n="instant" value="Instant">instant</option>
+            <option data-i18n="permanent" value="Permanent">permanent</option>
+            <option data-i18n="special" value="Special">special</option>
+            <option data-i18n="sustained" value="Sustained">sustained</option>
+          </select>
+          <label data-i18n-title="drain" title="Drain">
+            <input name="attr_drain" placeholder="-1" title="@{repeating_NPCspell_${x}_drain}" type="number"/>
+          </label>
+          <select name="attr_combat_type" title="@{repeating_NPCspell_${x}_combat_type}" value="Force">
+            <option value="Force " selected="selected"></option>
+            <option data-i18n="direct" value="Direct, Force ">direct</option>
+            <option data-i18n="indirect" value="Indirect, Force ?{Force|}, AP -">indirect</option>
+          </select>
+          <label data-i18n-title="dam" title="Dam">
+            <input name="attr_damage" placeholder="P" title="@{repeating_NPCspell_${x}_damage}" type="text"/>
+          </label>
+          <label data-i18n-title="notes" title="Notes">
+            <input name="attr_note" placeholder="may start fires" title="@{repeating_NPCspell_${x}_note}" type="text"/>
+          </label>
         </div>
       </fieldset>
     </div>
