finished npc refactor

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -2132,7 +2132,7 @@
       <div class="rows">
         <h1 class="settings" data-i18n="options">Options</h1>
       </div>
-      <div class="rows">
+      <div class="rows grunt">
         <label class="settings" data-i18n-title="mundane" title="mundane">
           <input class="character-type" name="attr_flag_special" title="@{flag_special}" type="radio" value="mundane"/>
           <h2 data-i18n="mundane">key</h2>
@@ -2146,7 +2146,7 @@
           <h2 data-i18n="emerged">key</h2>
         </label>
       </div>
-      <div class="rows">
+      <div class="rows host grunt vehicle">
         <label class="settings" title="Matrix Device">
           <input class="character-type" name="attr_flag_matrix" title="@{flag_matrix}" type="checkbox" value="matrix"/>
           <h2>Matrix Device</h2>
@@ -2733,7 +2733,7 @@
       </label>
     </div>
     <div class="rows">
-      <button data-i18n="attack" name="Attack" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=Attack}}{{base=^{base}}}{{dice=[[((@{attack}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}" type="roll">Attack</button>
+      <button data-i18n="attack" name="Attack" value="&{template:rolls}{{header=^{attack}}}{{base=^{base}}}{{dice=[[(@{attack}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" type="roll">Attack</button>
       <div class="matrix-bubble matrixAttack">
         <input name="attr_attack" value="0" type="radio"/><span></span>
         <input name="attr_attack" value="1" type="radio"/><span></span>
@@ -2760,7 +2760,9 @@
       <label class="round" data-i18n-title="attack" title="attack">
         <input name="attr_attack" placeholder="4" type="number" value=""/>
       </label>
-      <button data-i18n="sleaze" name="Sleaze" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=Sleaze}}{{base=^{base}}}{{dice=[[((@{sleaze}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}" type="roll">Sleaze</button>
+    </div>
+    <div class="rows">
+      <button data-i18n="sleaze" name="Sleaze" value="&{template:rolls}{{header=^{sleaze}}}{{base=^{base}}}{{dice=[[(@{sleaze}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" type="roll">Sleaze</button>
       <div class="matrix-bubble matrixSleaze">
         <input name="attr_sleaze" value="0" type="radio"/><span></span>
         <input name="attr_sleaze" value="1" type="radio"/><span></span>
@@ -2787,7 +2789,9 @@
       <label class="round" data-i18n-title="sleaze" title="sleaze">
         <input name="attr_sleaze" placeholder="4" type="number" value=""/>
       </label>
-      <button data-i18n="data_processing" name="Data Processing" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=Data Processing}}{{base=^{base}}}{{dice=[[((@{data_processing}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}" type="roll">Data Processing</button>
+    </div>
+    <div class="rows">
+      <button data-i18n="data_processing" name="Data Processing" value="&{template:rolls}{{header=^{data_processing}}}{{base=^{base}}}{{dice=[[(@{data_processing}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" type="roll">Data Processing</button>
       <div class="matrix-bubble matrixData">
         <input name="attr_data_processing" value="0" type="radio"/><span></span>
         <input name="attr_data_processing" value="1" type="radio"/><span></span>
@@ -2814,7 +2818,9 @@
       <label class="round" data-i18n-title="data_processing" title="data_processing">
         <input name="attr_data_processing" placeholder="4" type="number" value=""/>
       </label>
-      <button data-i18n="firewall" name="Firewall" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=Firewall}}{{base=^{base}}}{{dice=[[((@{firewall}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}" type="roll">Firewall</button>
+    </div>
+    <div class="rows">
+      <button data-i18n="firewall" name="Firewall" value="&{template:rolls}{{header=^{firewall}}}{{base=^{base}}}{{dice=[[(@{firewall}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" type="roll">Firewall</button>
       <div class="matrix-bubble matrixFirewall">
         <input name="attr_firewall" value="0" type="radio"/><span></span>
         <input name="attr_firewall" value="1" type="radio"/><span></span>
@@ -2842,20 +2848,20 @@
         <input name="attr_firewall" placeholder="4" type="number" value=""/>
       </label>
     </div>
-  </div>
-  <div class="matrix body">
-    <div class="rows grunt repeating">
+    <div class="rows repeating">
       <h1 data-i18n="programs">Programs</h1>
       <fieldset class="repeating_programs">
-        <input name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
-        <input name="attr_program_on" type="checkbox" checked="checked"/><span class="pictos">Q</span>
-        <button name="program" type="roll" value="@{gm_toggle} &amp;{template:rolls}{{header=@{program}}}{{desc=@{program_note}}}"><span name="attr_program"></span></button>
+        <input class="toggle" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
+        <input class="toggle" name="attr_program_on" type="checkbox" checked="checked"/><span class="pictos">Q</span>
+        <button name="program" type="roll" value="@{gm_toggle} &amp;{template:rolls}{{header=@{program}}}{{desc=@{program_note}}}"><span name="attr_program"></span></button><span name="attr_program_note"></span>
         <div class="settings">
-          <label data-i18n-title="programs" title="programs">
+          <h2 data-i18n="name">name</h2>
+          <label data-i18n-title="name" title="name">
             <input name="attr_program" placeholder="Program Name" title="@{repeating_programs_${x}_program}" type="text" value=""/>
           </label>
+          <h2 data-i18n="notes">notes</h2>
           <label data-i18n-title="notes" title="notes">
-            <input name="attr_program_note" placeholder="Program Description" title="@{repeating_programs_${x}_program_note}" type="text" value=""/>
+            <textarea name="attr_program_note" placeholder="Program Description" title="@{repeating_programs_${x}_program_note}" type="text" value=""></textarea>
           </label>
         </div>
       </fieldset>
