--- a/Shadowrun5thEdition/src/matrixdevice.html
+++ b/Shadowrun5thEdition/src/matrixdevice.html
@@ -1,7 +1,15 @@
 
 	<div class="device-attr">
 		<label>
-			<button type="roll" name="attack" value="&{template:rolls}{{header=Attack}}{{base=^{base}}}{{dice=[[(@{attack}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Attack Roll" data-i18n="attack">Attack</button>
+			<button type="roll" name="attack" value="
+			&{template:rolls}
+			{{header=Attack}}
+			{{base=^{base}}}
+			{{dice=[[(@{attack}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}
+
+
+
+			{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Attack Roll" data-i18n="attack">Attack</button>
 		</label>
 		<div class="matrix-bubble matrixAttack">
 			<input type="radio" name="attr_attack" value="1" /><span></span>
