--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -2688,7 +2688,7 @@
       <h1 data-i18n="intrusioncountermeasures">Intrusion Countermeasures</h1>
       <fieldset class="repeating_IC">
         <input name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
-        <input name="attr_IC" type="hidden" value=""/><span name="attr_IC"></span>
+        <input name="attr_IC" type="hidden" value=""/>
         <button name="IC" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{Intrusion Countermeasures}}}{{base=^{base}}}{{dice=[[((@{IC_attack})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}"><span name="attr_IC_name"></span></button><span name="attr_IC"></span>
         <div class="settings">
           <h2 data-i18n="name">Name</h2>
@@ -2735,7 +2735,6 @@
     <div class="rows">
       <button data-i18n="attack" name="Attack" value="&{template:rolls}{{header=^{attack}}}{{base=^{base}}}{{dice=[[(@{attack}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" type="roll">Attack</button>
       <div class="matrix-bubble matrixAttack">
-        <input name="attr_attack" value="0" type="radio"/><span></span>
         <input name="attr_attack" value="1" type="radio"/><span></span>
         <input name="attr_attack" value="2" type="radio"/><span></span>
         <input name="attr_attack" value="3" type="radio"/><span></span>
@@ -2764,7 +2763,6 @@
     <div class="rows">
       <button data-i18n="sleaze" name="Sleaze" value="&{template:rolls}{{header=^{sleaze}}}{{base=^{base}}}{{dice=[[(@{sleaze}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" type="roll">Sleaze</button>
       <div class="matrix-bubble matrixSleaze">
-        <input name="attr_sleaze" value="0" type="radio"/><span></span>
         <input name="attr_sleaze" value="1" type="radio"/><span></span>
         <input name="attr_sleaze" value="2" type="radio"/><span></span>
         <input name="attr_sleaze" value="3" type="radio"/><span></span>
@@ -2793,7 +2791,6 @@
     <div class="rows">
       <button data-i18n="data_processing" name="Data Processing" value="&{template:rolls}{{header=^{data_processing}}}{{base=^{base}}}{{dice=[[(@{data_processing}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" type="roll">Data Processing</button>
       <div class="matrix-bubble matrixData">
-        <input name="attr_data_processing" value="0" type="radio"/><span></span>
         <input name="attr_data_processing" value="1" type="radio"/><span></span>
         <input name="attr_data_processing" value="2" type="radio"/><span></span>
         <input name="attr_data_processing" value="3" type="radio"/><span></span>
@@ -2822,7 +2819,6 @@
     <div class="rows">
       <button data-i18n="firewall" name="Firewall" value="&{template:rolls}{{header=^{firewall}}}{{base=^{base}}}{{dice=[[(@{firewall}+(?{Attribute|Willpower,@{willpower}|Logic,@{logic}|Intuition,@{intuition}})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" type="roll">Firewall</button>
       <div class="matrix-bubble matrixFirewall">
-        <input name="attr_firewall" value="0" type="radio"/><span></span>
         <input name="attr_firewall" value="1" type="radio"/><span></span>
         <input name="attr_firewall" value="2" type="radio"/><span></span>
         <input name="attr_firewall" value="3" type="radio"/><span></span>
