fix complex forms

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1,5 +1,5 @@
 
-<input name="attr_version" type="hidden" value="2.010"/>
+<input name="attr_version" type="hidden" value="3.0"/>
 <input class="sheet_type" name="attr_sheet_type" type="hidden" value="pc"/>
 <input class="character-type" name="attr_flag_special" type="hidden" value="mundane"/>
 <div class="pc">
@@ -2649,7 +2649,7 @@
       <h1 data-i18n="complexform">Complex Forms</h1>
       <fieldset class="repeating_form">
         <input name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
-        <input name="attr_form" type="hidden" value=""/><span name="attr_software_dice"></span>
+        <input name="attr_form" type="hidden" value=""/><span name="attr_form_dice"></span>
         <button name="complex form" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{form_name}}}{{base=^{base}}}{{dice=[[((@{form_dice})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=?{Level|}, Fade [[?{Level|}+(@{form_fade})]]}}"><span name="attr_form_name"></span></button><span name="attr_form"></span>
         <div class="settings">
           <h2 data-i18n="dice">Dice</h2>
@@ -2679,7 +2679,7 @@
             <input name="attr_form_fade" placeholder="+2" title="@{repeating_form_${x}_form_fade}" type="number"/>
           </label>
           <label data-i18n-title="notes" title="Notes">
-            <input name="attr_note" placeholder="edit files" title="@{repeating_form_${x}_note}" type="text"/>
+            <input name="attr_form_note" placeholder="edit files" title="@{repeating_form_${x}_form_note}" type="text"/>
           </label>
         </div>
       </fieldset>
@@ -3675,7 +3675,7 @@
 		    getAttrs(["repeating_form_form_duration", "repeating_form_form_target", "repeating_form_form_fade", "repeating_form_form_note", ], (v) =>{
 		    	const tar = `Target ${v.repeating_form_form_target}, `;
 				const dur = `Duration ${v.repeating_form_form_duration}, `;
-				const not = `, ${v.repeating_form_form_note}`;
+				const not = `, ${v.repeating_form_form_note}` || '';
 				const fad = (v.repeating_form_form_fade > 0) ? `L+${v.repeating_form_form_fade}` : 
 							(v.repeating_form_form_fade < 0) ? `L${v.repeating_form_form_fade}` : "L";
 
