--- a/Ars_Magica_5th/Ars_Magica_5th.html
+++ b/Ars_Magica_5th/Ars_Magica_5th.html
@@ -1,4 +1,4 @@
-
+Ars Magica 5E
 
 <div class="sheet-top_bar">
     <div>
@@ -46,11 +46,11 @@
     </div>
 </div>
 <div class="sheet-tab-br"></div> 
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab1" value="1" title="Character" checked="checked" /><span></span>
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab2" value="2" title="Characteristics" /><span></span>
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab3" value="3" title="Magical Arts" /><span></span>
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab4" value="4" title="Combat" /><span></span>
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab5" value="5" title="Spells" /><span></span>
+<input type="radio" name="tab" class="sheet-tab sheet-tab1" value="1" title="Character" checked="checked" /><span></span>
+<input type="radio" name="tab" class="sheet-tab sheet-tab2" value="2" title="Characteristics" /><span></span>
+<input type="radio" name="tab" class="sheet-tab sheet-tab3" value="3" title="Magical Arts" /><span></span>
+<input type="radio" name="tab" class="sheet-tab sheet-tab4" value="4" title="Combat" /><span></span>
+<input type="radio" name="tab" class="sheet-tab sheet-tab5" value="5" title="Spells" /><span></span>
 <button type="roll" class="sheet-botch" name="roll_botch" title="Botch Roll" value="&{template:botch} {{roll= ?{Name of Query|1 Die,[[1d10]]|2 Dice,[[1d10]] [[1d10]]|3 Dice,[[1d10]] [[1d10]] [[1d10]]|4 Dice,[[1d10]] [[1d10]] [[1d10]] [[1d10]]|5 Dice,[[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]]|6 Dice,[[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]]|7 Dice,[[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]]|8 Dice,[[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]]|9 Dice,[[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]]|10 Dice,[[1d10]] [[1d10]][[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]] [[1d10]]} }}">Botch Roll</button>
 <div class="sheet-tab-br"></div> 
     <!-- 1 Details -->
@@ -1204,7 +1204,7 @@
                 <tr>
                     <th><input type="text" class="sheet-heading_3" name="attr_Weapon_name"/></th>
 
-                    <td><button type="roll" class="sheet-button" name="roll_weapon_Init" value="&{template:initiative} {{name= @{character_name} }} {{weapon= @{Weapon_name} }} {{roll= [[ @{Init} + 1d10 + @{wound_total} + @{Fatigue} + (?{Initiative Modifiers|0})]] }}">Init</button></td>
+                    <td><button type="roll" class="sheet-button" name="roll_weapon_Init" value="&{template:initiative} {{name= @{character_name} }} {{weapon= @{Weapon_name} }} {{roll= [[ (@{Init} + 1d10 + @{wound_total} + @{Fatigue} + (?{Initiative Modifiers|0})) &{tracker} ]] }}">Init</button></td>
                     <td><input type="text" class="sheet-number_1" name="attr_Init" value="(@{Quickness_Score} + @{Init_Weap} - @{Init_Enc})" disabled="true"/></td>
                     <td><button type="roll" class="sheet-button" name="roll_weapon_Atk" value="&{template:attack} {{name= @{character_name} }} {{weapon= @{Weapon_name} }} {{attack= [[ @{Atk} + 1d10 + @{wound_total} + @{Fatigue} + (?{Circumstantial Attack|0})]] }} {{damage= [[ (@{Strength_Score}) + (@{Dam_Weap}) + (?{Circumstantial Damage|0})]]}} ">Atk</button></td>
                     <td><input type="text" class="sheet-number_1" name="attr_Atk" value="(@{Dexterity_Score} + @{WeaponAbility} + @{Atk_Weap})" disabled="true"/></td>
